<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="detailedUserViewModel"
            type="com.example.sportsplatform.viewmodels.DetailedUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Identifier"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.059" />

        <Button
            android:id="@+id/btnFollowUser"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/followUser"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddBadge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.263" />

        <Button
            android:id="@+id/btnAddBadge"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:text="@string/addUserBadge"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/rvUserBadges"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserAge"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnBlockUser"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="152dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:text="@string/blockUser"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvUserBadges"
            app:layout_constraintVertical_bias="0.263" />

        <TextView
            android:id="@+id/tvUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="81dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvUserLocation"
            app:layout_constraintEnd_toStartOf="@+id/btnBlockUser"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvUserLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="126dp"
            android:layout_marginBottom="578dp"
            android:text="@string/location"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvUserAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/age"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rvUserBadges"
            app:layout_constraintEnd_toStartOf="@+id/btnAddBadge"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserFullName"
            app:layout_constraintVertical_bias="0.296" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUserBadges"
            android:layout_width="307dp"
            android:layout_height="261dp"
            android:layout_marginTop="244dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBadgeName"
            android:layout_width="151dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@{detailedUserViewModel.searchBarHint}"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/rvUserBadges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btnAddBadge"
            app:layout_constraintTop_toBottomOf="@+id/tvUserAge"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
