<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12"
        android:background="@drawable/bg_rounded_corner_stroked">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/twPopupTitle"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/popupTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            style="@style/SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_6"
            android:background="@drawable/bg_rounded_corner_stroked"
            android:paddingHorizontal="@dimen/margin_6"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twPopupTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            style="@style/SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginVertical="@dimen/margin_6"
            android:background="@drawable/bg_rounded_corner_stroked"
            android:paddingHorizontal="@dimen/margin_6"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnYes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>